--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -22,7 +22,7 @@
     <PackageReference Include="Shared" Version="2024.11.2" />
     <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.2" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2024.8.2-build118" />
     <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.6.2" />
     <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="1.0.1" />
     <PackageReference Include="NUnit" Version="4.1.0" />
