--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.4.2" />
-    <PackageReference Include="MessagingService.Client" Version="2024.4.2" />
-    <PackageReference Include="SecurityService.Client" Version="2024.5.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.11.2" />
+    <PackageReference Include="MessagingService.Client" Version="2024.8.2-build65" />
+    <PackageReference Include="SecurityService.Client" Version="2024.88.2-build73" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.11.4" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="25.1.35" />
     <PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
