--- a/EstateManagement.Client/EstateManagement.Client.csproj
+++ b/EstateManagement.Client/EstateManagement.Client.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="2024.11.2" />
+    <PackageReference Include="ClientProxyBase" Version="2024.11.4" />
+    <PackageReference Include="Shared.Results" Version="2024.11.4" />
   </ItemGroup>
 
   <ItemGroup>
