--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -9,18 +9,18 @@
   <ItemGroup>
     <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.4.2" />
     <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
-    <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.4.2" />
+    <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.8.2-build65" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
-    <PackageReference Include="ClientProxyBase" Version="2024.11.2" />
+    <PackageReference Include="ClientProxyBase" Version="2024.11.4" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
-    <PackageReference Include="SecurityService.Client" Version="2024.5.1" />
-    <PackageReference Include="Shared" Version="2024.11.2" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.2" />
+    <PackageReference Include="SecurityService.Client" Version="2024.88.2-build73" />
+    <PackageReference Include="Shared" Version="2024.11.4" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.4" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="TransactionProcessor.Client" Version="2024.8.2-build118" />
     <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.8.2-build118" />
@@ -33,7 +33,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.5.1" />
+    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.88.2-build73" />
   </ItemGroup>
 
   <ItemGroup>
