--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -12,12 +12,12 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="25.1.35" />
     <PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2024.8.2-build118" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.8.2-build119" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.8.2-build119" />
   </ItemGroup>
 
   <ItemGroup>
