--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -11,11 +11,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
     <PackageReference Include="Shared" Version="2024.11.4" />
     <PackageReference Include="Shared.EventStore" Version="2024.11.4" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.6.2" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.6.2" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.8.2-build119" />
     <PackageReference Include="FileProcessor.File.DomainEvents" Version="2024.8.2-build68" />
     <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2024.8.2-build68" />
   </ItemGroup>
