--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -7,23 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.4.2" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.11.1" />
     <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
-    <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.8.2-build65" />
+    <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.12.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
-    <PackageReference Include="ClientProxyBase" Version="2024.11.4" />
+    <PackageReference Include="ClientProxyBase" Version="2025.1.1" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
-    <PackageReference Include="SecurityService.Client" Version="2024.88.2-build73" />
-    <PackageReference Include="Shared" Version="2024.11.4" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.4" />
+    <PackageReference Include="SecurityService.Client" Version="2024.11.2-build74" />
+    <PackageReference Include="Shared" Version="2025.1.1" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2025.1.1" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2024.8.2-build119" />
-    <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.8.2-build119" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2024.12.1" />
+    <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.12.1" />
     <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="1.0.1" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
@@ -33,7 +33,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.88.2-build73" />
+    <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.11.2-build74" />
   </ItemGroup>
 
   <ItemGroup>
